fixed styling issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 body{
 	background-image: url("../images/background.JPG");
 	background-repeat: no-repeat;
+	font-family: 'Uncial Antiqua', cursive;
+	color: #b8860b;
 }
 
 header{
