calling it quits, final push

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,16 +6,16 @@ body{
 }
 
 header{
-	color: #b8860b;
-	font-family: 'Uncial Antiqua', cursive;
+	border: solid;
+	border-color: #99A3A4;
 	font-size: 75px;
-	text-align: left;
+	text-align: center;
+	margin: 15px;
+	padding: 0;
 	margin-left: 35px;
 }
 
 h1{
-	color: #b8860b;
-	font-family: 'Uncial Antiqua', cursive;
 	font-size: 25px;
 	text-align: left;
 	margin-left: 25px;
@@ -23,32 +23,24 @@ h1{
 
 h2{
 	text-align: left;
-	color: #b8860b;
-	font-family: 'Uncial Antiqua', cursive;
 	font-size: 25px;
 	margin-left: 25px;
 }
 
 h3{
 	text-align: left;
-	color: #b8860b;
-	font-family: 'Uncial Antiqua', cursive;
 	font-size: 25px;
 	margin-left: 25px;
 }
 
 h4{
 	text-align: left;
-	color: #b8860b;
-	font-family: 'Uncial Antiqua', cursive;
 	font-size: 25px;
 	margin-left: 25px;
 }
 
 p{
 	text-align: center;
-	color: #b8860b;
-	font-family: 'Uncial Antiqua', cursive;
 	font-size: 25px;
 }
 
