--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body{
 	background-image: url("../images/background.JPG");
 	background-repeat: no-repeat;
 	font-family: 'Uncial Antiqua', cursive;
-	color: #b8860b;
+	color: #ffffff;
 }
 
 header{
